deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcq-app
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mcq-app
  template:
    metadata:
      labels:
        app: mcq-app
    spec:
      containers:
        - name: mcq-app
          image: karthikeyank2004/myapp-dev:latest
          ports:
            - containerPort: 3000
