deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcq-app-service
  namespace: test
spec:
  selector:
    app: mcq-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
  type: NodePort
